# Opportunity-Sentinel

./: .npmrc  .replit  Opportunity set-up.docx  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  read_docx.html  replit.md
artifacts/api-server/: package.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: index.ts
artifacts/api-server/src/routes/: analyze.ts
artifacts/opportunity-verifier/: index.html  package.json  requirements.yaml  vite.config.ts
artifacts/opportunity-verifier/.replit-artifact/: artifact.toml
artifacts/opportunity-verifier/src/: index.css
artifacts/opportunity-verifier/src/components/: Gauge.tsx  StepLoader.tsx  VerdictCard.tsx
artifacts/opportunity-verifier/src/lib/: utils.ts
artifacts/opportunity-verifier/src/pages/: Home.tsx  not-found.tsx
artifacts/python-api/: run.sh
artifacts/python-api/src/: analyzer.py  image_analyzer.py  main.py  text_analyzer.py
attached_assets/: Pasted-1-Multi-Input-Feature-Users-can-input-a-URL-paste-Email_1774521229345.txt
lib/api-spec/: openapi.yaml
